lito: init: Mount tracefs/debugfs
E cutils-trace: Error opening trace file: No such file or directory (2)

Signed-off-by: EdwardWu <bluehome.wu@gmail.com>

--- a/recovery/root/init.recovery.qcom.rc
+++ b/recovery/root/init.recovery.qcom.rc
@@ -2,6 +2,11 @@
 
 import /init.recovery.qcom_decrypt.rc
 
+on early-init
+    mount tracefs tracefs /sys/kernel/tracing
+    chmod 0755 /sys/kernel/tracing
+    chown system system /sys/kernel/debug
+
 on init
     setprop sys.usb.configfs 1
 
